# burn-problems

./: .gitignore  .tmuxp.yaml  AGENTS.md  Cargo.toml  README.md  pytorchml.py  test_bce_loss.py  test_scaler.py
data/: demo_training_data.csv
src/: data.rs  dataset.rs  main.rs  model.rs  prepared.rs  scaler.rs  training.rs  utils.rs
