[package]
name = "burn-problems"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
burn = { version = "0.16.0", features = ["wgpu", "ndarray", "train"] }
clap = { version = "4.5.27", features = ["derive"] }
csv = "1.3.1"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
statrs = "0.18.0"

[dev-dependencies]
approx = "0.5.1"
