[package]
name = "burn-problems"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
burn = { git = "https://github.com/tracel-ai/burn.git", branch="main", features = ["wgpu", "ndarray", "train"] }
# burn = { version = "0.16.0", features = ["wgpu", "ndarray", "train"] }
clap = { version = "4", features = ["derive"] }
csv = "1"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
statrs = "0.18"

[dev-dependencies]
approx = "0.5"
